Issues #2769987, #2770053 by vlad.dancer: respect an element ajax, add permanent scrollbar

--- a/css/seven/selectmenu.css
+++ b/css/seven/selectmenu.css
@@ -10,6 +10,27 @@
   right: auto;
 }
 
+/**
+ * Place ajax throbber at the center of dropdown,
+ * also making dropdown more transparent.
+ */
+.form-type-select-icons {
+  position: relative;
+}
+.selecticons + .ajax-progress {
+  position: absolute;
+  top: 4px;
+  left: 55px;
+  z-index: 11;
+  font-weight: 600;
+}
+.selecticons + .ajax-progress .throbber {
+  padding-right: 6px;
+}
+.ajax-progress + .ui-selectmenu-button {
+  opacity: 0.15;
+}
+
 .ui-widget.ui-selectmenu-button {
   box-sizing: border-box;
   display: inline-block;
